# fmc-tfm

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  SPECIFICATION.md  fmc-tfm-gui.py  full_matrix_capture.py  material.py  release-plz.toml  requirements.txt  signals.py  total_focusing_method.py
.github/workflows/: release-binaries.yml  release-plz.yml
captures/: test01.fmc  test02.fmc
src/: app.rs  lib.rs  main.rs
src/core/: command.rs  defect.rs  fmc.rs  material.rs  mod.rs  probe.rs  project.rs  reconstructor.rs  simulator.rs  tfm.rs
src/io/: fmc_file.rs  mod.rs  project_file.rs
src/ui/: canvas.rs  heatmap.rs  mod.rs
tests/: integration.rs
