[package]
name = "fmc-tfm"
version = "0.1.0"
edition = "2021"
description = "FMC ultrasonic simulation and TFM image reconstruction"
license = "GPL-3.0-only"
repository = "https://github.com/quentinboudinel/fmc-tfm"
authors = ["Quentin Boudinel <quentin.boudinel@atelier-26.net>"]

[dependencies]
eframe = "0.29"
egui = "0.29"
hdf5-pure = "0.21"
image = { version = "0.25", default-features = false, features = ["png"] }
rayon = "1.10"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
